Created question bank, need to add more questions created quizStart function to begin the quiz

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="welcome">
             <h1>Code Quiz Challenge</h1>
             <p>Answer coding related questions before the timer runs out. Getting a question wrong will take time off the clock</p>
-            <button>Start Quiz</button>
+            <button id="quiz-button">Start Quiz</button>
         </div>
         <div id="quiz">
             <h1 id="question"></h1>
