changed to colons inside the question bank so it wroks properly changed answer buttons to class button made for loop to put answer possibilities in the button text

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div id="quiz">
             <h1 id="question"></h1>
-            <button id="answer"></button>
-            <button id="answer"></button>
-            <button id="answer"></button>
-            <button id="answer"></button>
+            <button class="answer" type="button">test</button>
+            <button class="answer" type="button">test</button>
+            <button class="answer" type="button">test</button>
+            <button class="answer" type="button">test</button>
             <div id="answer-result"></div>
         </div>
         <div id="quiz-end">
