--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <div id="quiz">
             <h1 id="question"></h1>
-            <button class="answer" type="button">test</button>
-            <button class="answer" type="button">test</button>
-            <button class="answer" type="button">test</button>
-            <button class="answer" type="button">test</button>
+            <button class="answer" type="button" value="1"></button>
+            <button class="answer" type="button" value="2"></button>
+            <button class="answer" type="button" value="3"></button>
+            <button class="answer" type="button" value="4"></button>
             <div id="answer-result"></div>
         </div>
         <div id="quiz-end">
