--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <input type="text" id="score-initials" name="initials">
                 <input type="submit" value="Submit Score" id="submit-score">
             </form>
+            <button class="play-again">Play Again?</button>
         </div>
         <div id="score-page">
             <h1>Highscores</h1>
