added highscore list so scores can be added to local storage and cleared changed to let all play again buttons work

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div id="quiz-end">
             <h1 id="quiz-result"></h1>
             <p id="result-prompt"></p>
-            <form action="" id="score">
+            <form id="score">
                 <label for="initials">Enter your Initials here</label>
                 <input type="text" id="score-initials" name="initials">
-                <input type="submit" value="Submit Score" id="submit-score">
+                <button id="submit-score">Submit Score</button>
             </form>
             <button class="play-again">Play Again?</button>
         </div>
