added comments and removed console logs and pseudo code and uneccissary code

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header id="header">
-        <p class="highscore-redirect">View Highscores</p>
-        <div>Time: <span id="time-left">60</span></div> <!--displays time left starting from 80-->
+        <p class="highscore-redirect">View Highscores</p> 
+        <div>Time: <span id="time-left">60</span></div> 
     </header>
     <main>
         <div id="welcome">
             <h1>Code Quiz Challenge</h1>
-            <p>Answer all of the coding related questions before the timer runs out. Getting a question wrong will take time off the clock</p>
+            <p>Answer all of the code related questions before the timer runs out. Getting a question wrong will take time off the clock</p>
             <button id="quiz-button">Start Quiz</button>
         </div>
         <div id="quiz">
